--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ build-backend = "hatchling.build"
 [tool.uv]
 dev-dependencies = [
     "ipykernel>=6.29.5",
+    "lxml>=5.3.0",
+    "pandas>=2.2.2",
     "pytest-cov>=5.0.0",
     "pytest>=8.3.2",
     "ruff>=0.6.3",
